"feat: enhance telecom monitoring backend with enums, validation, soft delete improvements, and Swagger docs
- added enum-based validation for node status, incident status, and severity
- refactored DTOs into request/response separation for clean API design
- implemented soft delete and restore for nodes and incidents with proper checks
- ensured deleted nodes return associated incidents correctly
- added global exception handler with clean API response format
- improved validation handling using @Valid and field-level messages
- fixed enum parsing to return user-friendly error messages
- added Swagger OpenAPI documentation with request/response examples
- improved controllers with clean layered structure and consistent API responses
"